@@ -1,3 +1,10 @@
+2002-05-21  Peter Stephenson  <pws@csr.com>
+
+	* 17141 plus mods: Src/utils.c, Src/Zle/zle_main.c,
+	Src/Zle/zle_thingy.c, Doc/Zsh/zle.yo: `zle -F fd handler'
+	installs shell function handler for when data becomes available
+	on fd while zle is active.  Requires select().
+
 2002-05-21  Sven Wischnowsky  <wischnow@zsh.org>
 
 	* 17195: Src/Zle/comp.h, Src/Zle/compcore.c, Src/Zle/compctl.c,
